test/tests/operators/udo/args_invalid_type/udo-args-invalid-type.txt
error: invalid type `invalid_kind` for parameter `value` in operator `invalid_type`
 --> inputs/package-roots/udo-args-invalid-type/argspkg_invalid_type/operators/invalid_type.tql:5:13
  |
5 |       type: invalid_kind
  |             ^^^^^^^^^^^^ 
  |
  = note: type aliases are not allowed
